<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cottagecoders.camera.Camera">


    <Button
        android:id="@+id/images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:text="@string/images" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_above="@id/images"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="@string/start" />
    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/images"
        android:maxLines="3"
        android:text="@string/hello_world"
        android:textSize="18dp"
        android:textStyle="bold" />
</RelativeLayout>

