<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/flashbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/gradient_button"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/take"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/gradient_button"
        android:text="@string/take"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/gradient_button"
        android:text="@string/exit"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/switch_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_toLeftOf="@id/exit"
        android:background="@drawable/gradient_button"
        android:text="@string/switch_camera"
        android:textColor="#ffffff" />

</RelativeLayout>